--- a/package.json
+++ b/package.json
@@ -1,17 +1,29 @@
 {
-  "name": "website",
-  "version": "1.0.0",
-  "description": "website",
+  "name": "site",
+  "version": "0.0.1",
+  "private": true,
+  "description": "fav site",
   "main": "index.js",
   "dependencies": {
+    "express": "~4.9.0",
     "body-parser": "~1.8.1",
     "cookie-parser": "~1.3.3",
-    "debug": "~2.0.0",
     "ejs": "~0.8.5",
-    "express": "~4.9.0",
     "mockjs": "^0.1.4",
     "morgan": "~1.3.0",
-    "serve-favicon": "~2.1.3"
+    "serve-favicon": "~2.1.3",
+    "debug": "~2.0.0",
+    "mongodb": "~1.4.15",
+    "async": "*",
+    "generic-pool": "*",
+    "mongoose": "*",
+    "passport": "*",
+    "passport-github": "*",
+    "express-session": "~1.9.1",
+    "connect-mongo": "~0.4.1",
+    "connect-flash": "~0.1.1",
+    "markdown": "0.5.0",
+    "multer": "0.1.6"
   },
   "devDependencies": {
     "encoding": "^0.1.11",
@@ -22,7 +34,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/FrontEnd-home/website.git"
+    "url": "https://github.com/guessyou/site.git"
   },
   "keywords": [
     "[\"node\"",
@@ -33,7 +45,7 @@
   "author": "FrontEnd-Ctrip",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/FrontEnd-home/website/issues"
+    "url": "https://github.com/guessyou/site/issues"
   },
-  "homepage": "https://github.com/FrontEnd-home/website"
+  "homepage": "https://github.com/guessyou/site"
 }
