--- a/package.json
+++ b/package.json
@@ -2,35 +2,64 @@
   "name": "site",
   "version": "0.0.1",
   "private": true,
-  "description": "fav site",
+  "description": "a fav site using MongoDB",
   "main": "index.js",
+  "engines": {
+    "node": "0.12.x"
+  },
   "dependencies": {
-    "express": "~4.9.0",
-    "body-parser": "~1.8.1",
-    "cookie-parser": "~1.3.3",
-    "ejs": "~0.8.5",
-    "mockjs": "^0.1.4",
-    "morgan": "~1.3.0",
-    "serve-favicon": "~2.1.3",
-    "debug": "~2.0.0",
-    "mongodb": "~1.4.15",
-    "async": "*",
-    "generic-pool": "*",
-    "mongoose": "*",
-    "passport": "*",
-    "passport-github": "*",
-    "express-session": "~1.9.1",
-    "connect-mongo": "~0.4.1",
-    "connect-flash": "~0.1.1",
-    "markdown": "0.5.0",
-    "multer": "0.1.6"
+    "async": "0.9.0",
+    "bcrypt": "0.8.1",
+    "body-parser": "1.9.2",
+    "compression": "1.2.0",
+    "connect-busboy": "0.0.1",
+    "connect-mongo": "0.4.1",
+    "cookie-parser": "1.3.3",
+    "cors": "2.5.0",
+    "csurf": "1.6.2",
+    "data2xml": "0.8.0",
+    "ejs-mate": "2.0.0",
+    "eventproxy": "0.3.1",
+    "express": "4.9.5",
+    "express-session": "1.9.1",
+    "loader": "0.1.4",
+    "lodash": "2.4.1",
+    "markdown-it": "3.0.3",
+    "memory-cache": "0.0.5",
+    "method-override": "1.0.2",
+    "moment": "2.9.0",
+    "mongoose": "3.8.23",
+    "multiline": "1.0.1",
+    "newrelic": "1.16.1",
+    "node-uuid": "1.4.1",
+    "nodemailer": "0.3.43",
+    "passport": "0.1.18",
+    "passport-github": "0.1.5",
+    "pm2": "0.12.7",
+    "qn": "1.0.1",
+    "ready": "0.1.1",
+    "response-time": "2.2.0",
+    "utility": "1.0.0",
+    "validator": "3.22.1",
+    "xmlbuilder": "2.5.0",
+    "xss": "0.1.15",
+    "jpush-sdk": "3.2.0"
   },
   "devDependencies": {
+    "gulp": "^3.8.10",
     "encoding": "^0.1.11",
-    "gulp": "^3.8.10"
+	"coveralls": "2.11.2",
+    "errorhandler": "1.2.2",
+    "istanbul": "0.3.2",
+    "mm": "0.2.1",
+    "mocha": "2.0.1",
+    "nock": "0.48.1",
+    "pedding": "1.0.0",
+    "should": "4.1.0",
+    "supertest": "0.14.0"
   },
   "scripts": {
-    "test": "node app.js"
+    "test": "make test"
   },
   "repository": {
     "type": "git",
@@ -42,7 +71,7 @@
     "\"website\"",
     "\"mysql\"]"
   ],
-  "author": "FrontEnd-Ctrip",
+  "author": "GuessU",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/guessyou/site/issues"
