--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "body-parser": "1.9.2",
     "compression": "1.2.0",
     "connect-busboy": "0.0.1",
-    "connect-mongo": "0.4.1",
+    "connect-mongo": "^0.7.0",
     "cookie-parser": "1.3.3",
     "cors": "2.5.0",
     "csurf": "1.6.2",
@@ -34,7 +34,8 @@
     "response-time": "2.2.0",
     "serve-favicon": "^2.2.0",
     "utility": "1.0.0",
-    "validator": "3.22.1"
+    "validator": "3.22.1",
+    "xmlbuilder": "^2.6.2"
   },
   "devDependencies": {
     "gulp": "^3.8.10",
