--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "cookie-parser": "1.3.3",
     "cors": "2.5.0",
     "csurf": "1.6.2",
+    "ejs": "^2.3.1",
     "ejs-mate": "2.0.0",
     "eventproxy": "0.3.1",
     "express": "4.9.5",
