--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "node": "0.12.x"
   },
   "dependencies": {
-    "async": "0.9.0",
+    "async": "^0.9.0",
     "bcrypt": "0.8.1",
     "body-parser": "1.9.2",
     "compression": "1.2.0",
